--- a/final project/templates/index.html
+++ b/final project/templates/index.html
@@ -109,6 +109,8 @@
     </div>
 
     <div class="main">
+        <h1>Coding Languages</h1>
+        There are many coding languages made for different tasks. 
         <details>
             <summary><p id="javascript"><span id="arrow2">▶</span>Javascript</p></summary>
             JavaScript is a programming language that enables dynamic content and interactivity on websites.<br>
@@ -119,13 +121,14 @@
         <details>
             <summary><p id="c++"><span id="arrow3">▶</span>C++</p></summary>
             C++ is mainly used for programming systems and complicated games.
-            <br><br><br> <h5>If you want to learn more about C++ go here <a href="c++.html">C++ Page</a></h5>
+            <br><br><br> <h5>If you want to learn more about C++ go here <a href="cPlusPlus.html">C++ Page</a></h5>
         </details>
         <br><br><br><br><br>
         <details>
             <summary><p id="c#"><span id="arrow4">▶</span>C#</p></summary>
-            this is C#.
-            <br><br><br> <h5>If you want to learn more about C# go here <a href="c#.html">C# Page</a></h5>
+            C# is a programming language that enables the development of powerful and versatile applications,
+            <br> including desktop, web, and mobile apps.
+            <br><br><br> <h5>If you want to learn more about C# go here <a href="cSharp.html">C# Page</a></h5>
         </details>
         <br><br><br><br><br>
         <details>
